<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rooms_fragment"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myapp2.Fragments.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_statics"
        android:name="com.example.myapp2.Fragments.StaticsFragment"
        android:label="@string/nav_statics"
        tools:layout="@layout/fragment_statics" />

    <fragment
        android:id="@+id/nav_route"
        android:name="com.example.myapp2.Fragments.RouteFragment"
        android:label="@string/nav_route"
        tools:layout="@layout/fragment_route" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.myapp2.Fragments.SettingsFragment"
        android:label="@string/nav_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>